--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,8 +32,9 @@ main {
 }
 
 footer {
-  align-self: flex-end;
-  margin: 0 auto;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
 }
 
 /* || GLOBAL STYLES */
