--- a/styles/construction.css
+++ b/styles/construction.css
@@ -4,14 +4,7 @@ body {
   /* border: yellow 5px solid; */
 }
 
-h1, h2, h3, p, section, ul, .btn, img, header, footer, div {
+h1, h2, h3, p, section, ul, .btn, img, header, footer, div, main {
   /* border: lime 3px solid; */
   /* background-color: hsla(120, 100%, 50%, 0.2); */
-}
-
-.experiment {
-  width: 40rem;
-  height: 40rem;
-  border: lime 3px solid;
-  background-color: hsla(120, 100%, 50%, 0.2);
 }
