--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,9 @@
 :root {
-  --bright-orange: hsl(31, 77%, 52%);
-  --dark-cyan: hsl(184, 100%, 22%);
-  --very-dark-cyan: hsl(179, 100%, 13%);
-  --paragraphs-color: hsla(0, 0%, 100%, 0.75);
-  --background-headings-buttons-color: hsl(0, 0%, 95%);
+  --very-dark-magenta: hsl(300, 43%, 22%);
+  --soft-pink: hsl(333, 80%, 67%);
+  --dark-grayish-magenta: hsl(300, 43%, 22%);
+  --dark-grayish-magenta: hsl(300, 24%, 96%);
+  --white: hsl(0, 0%, 100%);
 }
 
 /* || BOX MODEL FIX */
