--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,8 @@
 :root {
   --very-dark-magenta: hsl(300, 43%, 22%);
   --soft-pink: hsl(333, 80%, 67%);
-  --dark-grayish-magenta: hsl(300, 43%, 22%);
-  --dark-grayish-magenta: hsl(300, 24%, 96%);
+  --dark-grayish-magenta: hsl(303, 10%, 53%);
+  --light-grayish-magenta: hsl(300, 24%, 96%);
   --white: hsl(0, 0%, 100%);
 }
 
@@ -42,18 +42,74 @@ footer {
 body {
   font-family: 'Spartan', sans-serif;
   font-size: 15px;
+  font-weight: 500;
+  text-align: center;
+}
+
+h1 {
+  color: var(--very-dark-magenta);
+  font-weight: 700;
+}
+
+section {
+  padding-bottom: 1rem;
+}
+
+/* || INTRODUCTION */
+.introduction {
+  color: var(--dark-grayish-magenta);
+}
+
+.introduction {
+  line-height: 1rem;
 }
 
 /* || RATINGS */
+
 .ratings-list {
   list-style-type: none;
   padding: 0;
 }
 
+.rating-item {
+  color: var(--very-dark-magenta);
+  font-weight: 700;
+  background-color: var(--light-grayish-magenta);
+  border-radius: 0.5rem;
+}
+
+.rating-item {
+  padding: 1rem 0;
+  margin: 1rem 0;
+}
+
 /* || REVIEWS */
+
 .reviews-list {
   list-style-type: none;
   padding: 0;
+  text-align: left;
+}
+
+.review-item {
+  background-color: var(--very-dark-magenta);
+  border-radius: 0.5rem;
+  padding: 1rem;
+  margin: 1rem 0;
+}
+
+.reviewer-name {
+  color: var(--white);
+  font-weight: 700;
+}
+
+.reviewer-role {
+  color: var(--soft-pink);
+  font-weight: 400;
+}
+
+.reviewer-comment {
+  color: var(--white);
 }
 
 /* || ATTRIBUTION */
