--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,6 +49,7 @@ body {
 h1 {
   color: var(--very-dark-magenta);
   font-weight: 700;
+  padding-bottom: 1rem;
 }
 
 section {
@@ -109,6 +110,7 @@ section {
 .reviewer-name {
   color: var(--white);
   font-weight: 700;
+  margin-bottom: 0;
 }
 
 .reviewer-role {
@@ -118,6 +120,29 @@ section {
 
 .reviewer-comment {
   color: var(--white);
+  clear: both;
+  /* padding-bottom: 0;  */
+}
+
+.reviewer-picture {
+  float: left;
+  height: 3rem;
+  width: 3rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+  background-size: cover;
+}
+
+#COLTON-SMITH {
+  background-image: url(../images/image-colton.jpg);
+}
+
+#IRENE-ROBERTS {
+  background-image: url(../images/image-irene.jpg);
+}
+
+#ANNE-WALLACE {
+  background-image: url(../images/image-anne.jpg);
 }
 
 /* || ATTRIBUTION */
