--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,11 +1,31 @@
 /* || RESPONSIVE STYLES */
 
-/* || DESKTOP : for sizes 950px and larger */
-@media screen and (min-width: 950px){
-
+/* || DESKTOP : for sizes 1250px and larger */
+@media screen and (min-width: 1250px){
+  /* || Main Layout (Grid) */
+  main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 7rem;
+  }
+  .reviews-section {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  /* || Ratings */
+  .rating-item {
+    display: flex;
+  }
+  .five-stars {
+    margin: 0 1rem;
+  }
+  /* || Leading */
+  .leading {
+    text-align: left;
+  }
 }
 
 /* || DESKTOP : for sizes 1920px and larger */
 @media screen and (min-width: 1920px){
-  
+
 }
