--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,10 @@ footer {
 /* || GLOBAL STYLES */
 
 body {
+  min-width: 400px;
+}
+
+body {
   font-family: 'Spartan', sans-serif;
   font-size: 15px;
   font-weight: 500;
@@ -100,6 +104,7 @@ section {
   max-width: 5.3rem;
   margin: auto;
   margin-bottom: 0.5rem;
+
   background-image: url(../images/icon-star.svg);
 }
 
